# docs/swagger.json
@@ -121,9 +121,12 @@
                         "required": true
                     },
                     {
+                        "enum": [
+                            "Books"
+                        ],
                         "type": "string",
-                        "description": "Category name",
-                        "name": "category",
+                        "description": "Categories",
+                        "name": "enumstring",
                         "in": "query"
                     }
                 ],
@@ -179,13 +182,27 @@
                 "action": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "selector": {
                     "type": "string"
                 }
             }
         },
         "products.Dto": {
-            "type": "object"
+            "type": "object",
+            "properties": {
+                "link": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "string"
+                }
+            }
         }
     }
 }
